# SupportCompressImage

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/haydar/supportcompressimage/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/guetzli/guetzli/: guetzli.cc  processor.cc
app/src/main/java/io/haydar/supportcompressimage/: GuetzliClient.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/haydar/supportcompressimage/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
